# structured

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-docs.txt  requirements-tests.txt  requirements.txt  structured.py
.github/ISSUE_TEMPLATE/: 1-feature-request.yml  2-bug.yml  3-release.md  bug_report.md  custom.md
.github/workflows/: black.yml  python-package.yml  tests.yml
docs/: README.md
docs/source/: conf.py  custom_types.rst  index.rst  modules.rst  structured.complex_types.rst  structured.rst  tutorial.rst  types.rst
structured/: __init__.py  base_types.py  basic_types.py  serializers.py  structured.py  type_checking.py  utils.py
structured/complex_types/: __init__.py  array_headers.py  arrays.py  blob.py  strings.py
structured/hint_types/: __init__.py  arrays.py  basic_types.py  condition.py  serialize_as.py  strings.py  tuples.py
structured/serializers/: __init__.py  api.py  arrays.py  conditional.py  self.py  strings.py  structs.py  structured.py  tuples.py  unions.py
tests/: __init__.py  test_annotations.py  test_arrays.py  test_base_types.py  test_blob.py  test_complex.py  test_conditional.py  test_generics.py  test_self.py  test_serializers.py  test_strings.py  test_structured.py  test_tuples.py  test_unions.py  test_utils.py
